playbin: Forward CONTEXT queries to the corresponding sink if we have one

https://bugzilla.gnome.org/show_bug.cgi?id=700967